# Voyager-T800

./: .dockerignore  .env.docker  .env.example  .gitignore  .prod.env.example  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-streamlit.txt  ruff.toml  setup_dynamodb_table.py  setup_weaviate.py
.cursor/rules/: general-guidelines.mdc  security-and-privacy.mdc  tech-stack-overview.mdc
.github/ISSUE_TEMPLATE/: project-task.md
.streamlit/: config.toml
app/: main.py
app/agents/: agent_runner.py  cli.py  graph.py  nodes.py  tools.py
app/api/: auth.py
app/chains/: itinerary_chain.py
app/cli/: __init__.py  attractions_cli.py  embeddings_cli.py
app/config/: __init__.py  agent.yaml  attraction_chunk_class_schema.yaml  attraction_class_schema.yaml  config.py  config_models.py  days_mapping.yaml  default.yaml  destinations_mapping.yaml  dev.yaml  image_recognition_config.yaml  loader.py  logging_config.py  map_data_service_config.json  map_data_service_config.yaml  preferences_mapping.yaml  prod.yaml  tag_set_class_schema.yaml  weaviate_connection.yaml
app/data_layer/: dynamodb_client.py
app/frontend/: chat_interface.py  style.css
app/memory/: async_summary.py  custom_summary_memory.py  database_prototype_setup.py  dynamodb_checkpointer.py  utils.py
app/prompts/: agent_claude_prompt.txt  agent_prompt.txt  events_query_template.txt  expert_prompt.txt  expert_prompt_for_langchain.txt  itinerary_parser.txt  json_prompt.txt  process_image_prompt.txt  simple_prompt.txt  system_prompt.txt  test_itinerary_prompt.txt  test_summary_prompt.txt
app/retrieval/: prototype_retriever.py  prototype_retriver.py  waiss_retriever.py
app/services/: cognito_service.py  image_validation.py  itinerary_storage.py  (+6 more)
data/: attraction_metadata.csv  attractions_metadata.csv  attractions_names_list.csv  generate_embeddings.py  metadata.csv
data_layer/: dynamodb_client.py
docs/: ai_parser_research.md  api-contract-v1.md  auth_flow_cognito.md  basic-llm-workflow-example-output.md  cursor-rules-guide.md  data_model.md  dev-setup.md  docker-setup.md  embedding-notes.md  events_api.md  example_prompts.md  image_handling.md  knowledge-base-summary.md  llm-prompting-experiments.md  map-api-research.md  parcer_sample_outputs_doс.md  parser_sample_outputs_doс.md  project-configuration-setup.md  project-outline.md  project-scope.md  project-structure.md  prompt-techniques.md  review_1.md  scope-diagram.drawio  vector-db-schema-design.md  weather_integration.md
llm/: prompting.py
tests/: conftest.py  test_chain_weather_integration.py  test_cognito.py  test_config_loader.py  test_config_models.py  test_creating_history_to_save.py  test_embedding_pipeline.py  test_image_validation.py  test_itinerary_endpoints.py  test_parser.py  test_parsers.py  test_prompting.py  test_put_get_items_DynamoDB.py  test_read_prompt_from_file.py  test_summary_memory.py  test_text_cleaning.py  test_weather_service.py
(+360 files in other folders)
